<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/back"
        android:layout_gravity="start|top" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="315dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:adjustViewBounds="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticket_type"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_marginBottom="8dp"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:singleSelection="true"
                    app:checkedButton="@id/btnAwaria">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAwaria"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/failure"
                        app:backgroundTint="@color/toggle_button_selector_awaria"
                        android:textColor="@color/toggle_button_text_selector"
                        app:strokeColor="@android:color/transparent"
                        app:checkedIconTint="@color/white" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPrzestoj"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/downtime"
                        style="@style/Widget.Material3.Button"
                        app:checkedIconTint="@color/white"
                        app:backgroundTint="@color/toggle_button_selector_przestoj"
                        android:textColor="@color/toggle_button_text_selector"/>
                </com.google.android.material.button.MaterialButtonToggleGroup>
                <EditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_title"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/report_description"
                    android:minLines="5"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/buttonSubmitTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/material_dynamic_primary20"
                    android:text="@string/report_send" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>