...
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <Button
        android:id="@+id/buttonScanQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4D5A88D1"
        android:text="@string/scan_prompt" />

    <Button
        android:id="@+id/buttonReportIssue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4D5A88D1"
        android:text="@string/report_problem" />

...
